new branch code update

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body>
 <div>
 
-<marquee> This is my website, Hello world </marquee>
+<marquee> This is my website, Hello world new branch </marquee>
 
 
 </div>
